# yclients-micro

./: .gitignore  Dockerfile  LICENSE  changelog.md  docker-compose.yaml  logger-json.conf  logger-plain.conf  pyproject.toml  requirements copy.txt  requirements.txt
.github/workflows/: deploy.yml
docs/ru/: asyncapi_events.yaml  loggin.md
src/micro/: api_github.py  api_yclients.py  calendar.py  config.py  events.py  kafka_consumer.py  kafka_producer.py  logging_trace.py  max.py  metrics.py  metrics_api.py  migrate.py  notifications.py  pg.py  pg_ext.py  render.py  render_ext.py  restdb.py  schemes.py  send_messages.py  service.py  singleton.py  sql_templates.py  status.py  telegram.py  utils.py
src/micro/models/: ai_events.py  api_records.py  asyncapi.yaml  base_event.py  bot_events.py  buh_events.py  cards_events.py  chat_events.py  client_events.py  common_events.py  crm_events.py  cron_events.py  header_event.py  mail_events.py  payment_events.py  sync_events.py  system_events.py  timetable_events.py  worker_events.py
tests/: tasks.py  test.py  test_diff.py  test_events.py  test_single.py  ui.py
