[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micro"
version = "0.0.7"
authors = [
  { name="Sergey Strukov", email="strukovsv@mail.ru" },
]
description = "Python library for my microservices"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'fastapi==0.98.0',
  'fastapi-utils==0.2.1',
  'starlette-exporter==0.16.0',
  'prometheus-client==0.17.0',
  'asyncio==3.4.3',
  'python-json-logger==2.0.7',
  'httpx==0.27.2',
  'aiokafka==0.11.0',
  'psycopg[binary,pool]==3.1.9',
  'yoyo-migrations==8.2.0'
#  ,
#  'sentry-sdk=='
]

[project.urls]
Homepage = "https://github.com/strukovsv/micro"
Issues = "https://github.com/strukovsv/micro/issues"
