[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micro"
version = "0.0.7"
authors = [
  { name="Sergey Strukov", email="strukovsv@mail.ru" },
]
description = "Python library for my microservices"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'fastapi==0.135.1',
  'fastapi-utils==0.8.0',
  'starlette-exporter==0.23.0',
  'prometheus-client==0.24.1',
  'asyncio==4.0.0',
  'python-json-logger==4.0.0',
  'httpx==0.28.1',
  'aiokafka==0.13.0',
  'psycopg[binary,pool]==3.1.9',
  'yoyo-migrations==8.2.0'
]

[project.urls]
Homepage = "https://github.com/strukovsv/micro"
Issues = "https://github.com/strukovsv/micro/issues"
